--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #4f4f4f7d;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,7 +14,7 @@
 }
 
 canvas {
-  border: 4px solid #646cff;
+  border: 4px solid #681717;
   
 }
 
